Changelog for mk-parallel-restore:

2009-02-01: version 1.0.11

   * Resume died if the table did not exist (issue 221).

2008-12-01: version 1.0.10

   * Updates to shared code.

2008-09-17: version 1.0.9

   * Made restores resume by default if possible (issue 30).
   * Added --noresume option (issue 30).
   * Added --[no]atomicresume option (issue 30).
   * --progress is reported by bytes instead of chunk count (issue 32).
   * --progress counting and prediction was improved.
   * LOAD DATA queries show bytes done and db.tbl name in SQL comment.
   * CHARACTER SET was declared in the wrong place for csv LOAD DATA query.
   * Made debugging code more efficient in non-debug mode.

2008-08-11: version 1.0.8

   * Files downloaded directly from SVN crashed due to version information.
   * Added --progress option.

2008-06-02: version 1.0.7

   * .trg files were sometimes rejected from loading.
   * Command-line options are generated from the POD.

2008-03-16: version 1.0.6

   * Added --setvars option (bug #1904689, bug #1911371).
   * Changed --charset to be compatible with other tools (bug #1877548).

2008-02-10: version 1.0.5

   * Fixed forking issues with File::Find on Solaris (bug #1887102).
   * Fixed child process exit status on Solaris (bug #1886444).
   * The --defaults-file option caused a mysql error (bug #1886866).

2008-01-24: version 1.0.4

   * The -D option was used as a default DB for the connection (bug #1870415).

2008-01-05: version 1.0.3

   * Made suffixes for time options optional (bug #1858696).
   * --ignoretables was ignored.

2007-12-16: version 1.0.2

   * Updated common code.

2007-12-07: version 1.0.1

   * Updated common code.

2007-11-12: version 1.0.0

   * Removed the --sql option, as sort order is implied when --tab is given.
   * Added code to load .trg files (triggers) and load 00_views files.
   * Print out files that are not loaded.

2007-11-04: version 0.9.1

   * Made command-line help easier to use.